monoliths/2048-game/deployment-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: game-2048
  name: nginx-template
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: shazi7804/nginx-health
        ports:
        - containerPort: 80
