monoliths/2048-game/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: game-2048
  name: deployment-2048
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-2048
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-2048
    spec:
      containers:
      # - image: alexwhen/docker-2048
      - image: 381354187112.dkr.ecr.us-east-1.amazonaws.com/game-2048
        imagePullPolicy: Always
        name: app-2048
        ports:
        - containerPort: 80
      nodeSelector:
        beta.kubernetes.io/arch: amd64
