monoliths/2048-game/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: game-2048
  name: nginx
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: nginx
