monoliths/2048-game/ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: game-2048
  name: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: game
    alb.ingress.kubernetes.io/group.order: '10'
spec:
  rules:
    - http:
        paths:
          - path: /health/
            backend:
              serviceName: nginx
              servicePort: 80
